package umcarro;

public class DadosDeAcessoInvalidos extends Throwable {

}
