package umcarro;

public class NaoTemPedidos extends Throwable {
}
