package umcarro;

public class OpcaoInvalida extends Throwable {
}
