package umcarro;

public class SemVeiculosDisponiveis extends Exception {
}
