@startuml

title __POO19's Class Diagram__\n

  package umcarro.Models {
    class Cliente {
    }
  }
  

  package umcarro.Controllers {
    class Clientes {
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class DadosDeAcessoInvalidos {
      }
    }
  }
  

  package umcarro.Controllers {
    class DataBaseSaver {
    }
  }
  

  package umcarro.Controllers {
    class Main {
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class NaoTemPedidos {
      }
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class OpcaoInvalida {
      }
    }
  }
  

  package umcarro.Models {
    class Pedido {
    }
  }
  

  package umcarro.Controllers {
    class Pedidos {
    }
  }
  

  package umcarro.Models {
    class Proprietario {
    }
  }
  

  package umcarro.Controllers {
    class Proprietarios {
    }
  }
  

  package umcarro.Controllers {
    package umcarro.Controllers.Exceptions {
      class SemVeiculosDisponiveis {
      }
    }
  }
  

  package umcarro.Controllers {
    class UMCarro {
    }
  }
  

  package umcarro.Models {
    class Utilizador {
    }
  }
  

  package umcarro.Models {
    class Veiculo {
    }
  }
  

  package umcarro.Controllers {
    class Veiculos {
    }
  }
  

  package umcarro.Views {
    class View {
    }
  }
  

  Cliente -up-|> Serializable
  Cliente -up-|> Utilizador
  DadosDeAcessoInvalidos -up-|> Serializable
  NaoTemPedidos -up-|> Serializable
  OpcaoInvalida -up-|> Serializable
  Pedido -up-|> Serializable
  Proprietario -up-|> Serializable
  Proprietario -up-|> Utilizador
  SemVeiculosDisponiveis -up-|> Serializable
  UMCarro -up-|> Serializable
  UMCarro o-- Cliente : cliente
  UMCarro o-- Proprietario : proprietario
  UMCarro o-- Clientes : clientes
  UMCarro o-- Proprietarios : proprietarios
  UMCarro o-- Veiculos : veiculos
  UMCarro o-- Pedidos : pedidos
  UMCarro o-- View : view
  UMCarro o-- DataBaseSaver : db
  Utilizador -up-|> Serializable
  Veiculo -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
